--- a/rohit-landing-page.html
+++ b/rohit-landing-page.html
@@ -23,7 +23,7 @@
 
             <div class="left-side"> 
 
-                <img src="images/" class="rohit-img">
+                <img src="images/rohit2.jpg" class="rohit-img">
                 <p class="name">Name : <span class="rohit"> Rohit Sharma</span> </p>
                 <p class="role">Role : <span class="rohit"> Backend Support </span> </p>
                 
